--- a/GabrielGravina-JavaScript.tex
+++ b/GabrielGravina-JavaScript.tex
@@ -162,7 +162,7 @@
 \chapterimage{capitulo.jpg} % Chapter heading image
 \input{02basicosJS.tex}
 \input{03ObjetosJS.tex}
-%\input{04aplicJS.tex}
+\input{04aplicJS.tex}
 %\input{05ferramentasJS.tex}
 %\input{06conclusao.tex}
 
