--- a/01introducJS.tex
+++ b/01introducJS.tex
@@ -16,23 +16,23 @@ Mesmo assim, suas sintaxes tem traços de semelhança, mas nada além disso. \ne
 
 Por ser uma linguagem fácil de ser aprendida e fortemente tolerante, permitiu que usuários pudessem ter suas necessidades 
 atendidas de forma cômoda e eficiente.
- A linguagem é de alto-nível, dinâmica e interpretada. Além disso, é adequada para orientação de objeto e programação funcional. 
+ A linguagem é de alto-nível, dinâmica e interpretada. Além disso, é adequada para orientação a objeto e programação funcional. 
  É uma linguagem não tipada – ou seja, suas variáveis não tem um tipo específico e seus tipos não são importantes para a linguagem. 
 Baseado no livro \cite{flanagan2020javascript}.
 
 \section{Aspectos hist\'{o}ricos da linguagem JavaScript}
    
-A linguagem foi criada na NETSCAPE por Brendan Eich. Tecnicamente, JavaScript é uma marca registrada da Sun Microsystems (atualmente Oracle) usada para descrever a implementação da língua pela Netscape (atualmente Mozilla). Na época, a Netscape enviou a linguagem para a padronização da ECMA – European Computer Manufacturer’s Association, esua versão padronizada ficou conhecida como “ECMAScript”. Na prática, todos chamam a linguagem apenas de JavaScript.
+A linguagem foi criada na NETSCAPE por Brendan Eich. Tecnicamente, JavaScript é uma marca registrada da Sun Microsystems (atualmente Oracle) usada para descrever a implementação da língua pela Netscape (atualmente Mozilla). Na época, a Netscape enviou a linguagem para a padronização da ECMA – European Computer Manufacturer’s Association, e sua versão padronizada ficou conhecida como “ECMAScript”. Na prática, todos chamam a linguagem apenas de JavaScript.
 De acordo com \cite{flanagan2020javascript}.
 
 
 
    \section{\'{A}reas de Aplica\c{c}\~{a}o da Linguagem}
 
-   A linguagem JavaScript é completamente versátil e tem apliçãoes nos variados ambientes, seja no client-side ou no server-side. 
+   A linguagem JavaScript é completamente versátil e tem aplicações nos mais variados ambientes, seja no client-side ou no server-side. 
    Nesta seção
-   falarei de algumas aplicações e paradigmas da progrmação que podem ser implementados em JavaScript.
-   De acordo com \cite{flanagan2020javascript}.
+   falarei de algumas aplicações e paradigmas da programação que podem ser implementados em JavaScript.
+
         \subsection{NodeJS}
         A linguagem foi criada para ser utilizada em navegadores da web, e esse segue sendo seu ambiente mais comum de execução até hoje. Enfim, o ambiente do navegador permite a linguagem obter a entrada de usuários e fazer requests HTTP. Porém, em 2010 outro ambiente foi criado para executar código em JavaScript. 
 O NodeJS, popularmente conhecido como Node, tinha a ideia de invés de manter a linguagem presa a um navegador, 
