--- a/05ferramentasJS.tex
+++ b/05ferramentasJS.tex
@@ -16,10 +16,31 @@ Neste cap\'{\i}tulo devem ser apresentadas pelo menos DUAS (e no m\'{a}ximo 5) f
   \item Outras informa\c{c}\~{o}es
 \end{itemize}
 
-    \section{Editor MNOP}
+    \section{Node JS}
+    A linguagem JavaScript não está mais atrelada somente ao navegador. Por isso, para utilizar a linguagem sem precisar recorrer a um Browser, utiliza-se o nodeJS. O NodeJS, conhecido apenas como Node, nada mais é do que o V8 (Engine do JavaScript no navegador Google Chrome) fora do Chrome. Sendo assim, para instalar o Node basta entrar em https://nodejs.org e baixar a versão desejada. 
+    
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.3\linewidth]{Pictures/NodeLogo}
+	\caption{}
+	\label{fig:nodelogo}
+\end{figure}
+    
+    \subsection{NVM}
+    Devido a existência de várias versões do Node, o NVM - Node Version Manager - facilita o trabalho com versões diferentes. Por exemplo, se num projeto antigo decide-se pela versão 11.5, é possível com o NVM utilizar o node 11.5 sempre naquele projeto, mesmo após atualizar o node para versões mais recentes.
 
 
-    \section{Compilador XYZ}
+    \section{Visual Studio Code}
+    Hoje em dia existem diversas versões de IDEs para as mais variadas linguagens de programação. Netbeans e Eclipse para o Java, Pycharm para o Python entre outras. IDEs feitas pensando especificamente em uma linguagem sempre tiveram vantagem em relação às IDEs multi-uso, como o sublime-text. Porém, com o Visual Studio Code, que chamarei de VSC, programar em várias linguagens é fácil e sem dor de cabeça. 
+    O VSC é uma IDE fácil de usar, relativamente leve e permite a instalação de inúmeras extensões para tornar o desenvolvimento o mais produtivo possível.
+    Portanto, para programar em JavaScript, o VSCode é uma das melhores IDEs disponíveis. É fácil programar para web utilizando JS, HTML e CSS, e além disso, vários recursos são disponibilizados pelo programa.
+    
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.2\linewidth]{Pictures/VSC_Logo}
+		\caption{}
+		\label{fig:vsclogo}
+	\end{figure}
 
 
     \section{Interpretador UVW}
