--- a/GabrielGravina-JavaScript.tex
+++ b/GabrielGravina-JavaScript.tex
@@ -163,8 +163,8 @@
 \input{02basicosJS.tex}
 \input{03ObjetosJS.tex}
 \input{04aplicJS.tex}
-%\input{05ferramentasJS.tex}
-%\input{06conclusao.tex}
+\input{05ferramentasJS.tex}
+\input{06conclusao.tex}
 
 
 
