Terminando conclusão e consertando imagens

--- a/04aplicJS.tex
+++ b/04aplicJS.tex
@@ -354,25 +354,25 @@ O capítulo abaixo irá demonstrar implementações em JavaScript de aplicaçõe
     
     \subsection{BST Prints}
     Abaixo se encontram imagens do código e do resultado, respectivamente.
-    \begin{figure}[h]
-    	\centering
-    	\includegraphics[width=1\linewidth]{Pictures/BST_Code1}
+    \begin{figure}[H]
+    
+    	\includegraphics[width=1.1\linewidth]{Pictures/BST_Code1}
     	\caption{}
     	\label{fig:bstcode1}
     \end{figure}
-    \begin{figure}[h]
+    \begin{figure}[H]
     	\centering
-    	\includegraphics[width=1\linewidth]{Pictures/BST_Code2}
+    	\includegraphics[width=1.1\linewidth]{Pictures/BST_Code2}
     	\caption{}
     	\label{fig:bstcode2}
     \end{figure}
-    \begin{figure}[h]
+    \begin{figure}[H]
     	\centering
     	\includegraphics[width=0.9\linewidth]{Pictures/BST_Code3}
     	\caption{}
     	\label{fig:bstcode3}
     \end{figure}
-    \begin{figure}[h]
+    \begin{figure}[H]
     	\centering
     	\includegraphics[width=0.9\linewidth]{Pictures/BST_Result}
     	\caption{}
@@ -414,13 +414,13 @@ O capítulo abaixo irá demonstrar implementações em JavaScript de aplicaçõe
     \subsection{Prints Calculadora}
 	
 	Imagens do código e do resultado, respectivamente: 
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.9\linewidth]{Pictures/CalcCode}
 		\caption{}
 		\label{fig:calccode}
 	\end{figure}
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.9\linewidth]{Pictures/CalcResult}
 		\caption{}
@@ -486,16 +486,16 @@ O código foi retirado de:
 
 \subsection{Prints QuickSort}
 	Código Fonte e imagem do resultado, respectivamente:
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.7\linewidth]{Pictures/QuickCode}
+		\includegraphics[width=0.95\linewidth]{Pictures/QuickCode}
 		\caption{}
 		\label{fig:quickcode}
 	\end{figure}
 	
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.7\linewidth]{Pictures/QuickResult}
+		\includegraphics[width=0.95\linewidth]{Pictures/QuickResult}
 		\caption{}
 		\label{fig:quickresult}
 	\end{figure}
