--- a/06conclusao.tex
+++ b/06conclusao.tex
@@ -8,12 +8,12 @@
 \chapter{Conclus\~{o}es}
 
 
-Os problemas enfrentados neste trabalho ...
-
-
-O trabalho que foi desenvolvido em forma resumida ...
-
-Aspectos n\~{a}o considerados que poderiam ser estudados ou \'{u}teis para ...
+Fazer este trabalho ao longo do semestre com certeza não foi uma tarefa fácil. Foram longas noites pensando no que seria escrito, aprendendo a usar o LaTeX e revisando o conteúdo produzido. A pesquisa e elaboração do trabalho foram árduas e, mesmo com certo grau de experiência na linguagem, encontrei muitos conceitos que até então eram desconhecidos. 
+Os livros da linguagem com certeza ajudaram muito, porém nem sempre foram a única fonte de referências utilizada. Como diria Richard Feynman, se você não consegue explicar algo em termos simples, você não entende do assunto. Logo, para explicar algo, primeiro é preciso entender. Nesse sentido, para reforçar meu conhecimento foram assistidos tutoriais em video da linguagem, além da leitura da documentação oficial da linguagem.
+Ademais, aprender esses conceitos foi a parte mais difícil do trabalho.
+Contudo, foi a busca incessante de referências e conhecimentos que fizeram a experiência de desenvolver esse trabalho ser tão gratificante. Por isso, explicar algo é sempre a melhor forma de aprender, e sendo assim, escrever este livro foi uma excelente forma de aprendizado.  
+  
+  O trabalho foi desenvolvido com o objetivo de explicar e introduzir a linguagem de forma simples e resumida. Portanto, não foi possível explicar detalhadamente alguns conceitos como os pontos flutuantes binários e os erros de arredondamento. 
 
 
 
